tests/errors/surf_exc_09.ki
# using an instance with no _enter_ as a context manager is an error
class C:
    var _init_ = Function(self):
        self.x = 1
with C() as c:
    discard c
